creacion configuracion INICIAL

--- a/CoWorkSpace/CoWorkSpace.API/appsettings.Development.json
+++ b/CoWorkSpace/CoWorkSpace.API/appsettings.Development.json
@@ -1,14 +1,14 @@
 {
 
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=DZULUAGA;Database=CoWorkSpace;Encrypt=False;User id=sa;Password=dccz0223*"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-GHAP9BM;Database=VeterinaryPS;Encrypt=False;User ID=sa;Password=Camilo780.;"
+  },
 
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
