--- a/CoWorkSpace/CoWorkSpace.API/appsettings.Development.json
+++ b/CoWorkSpace/CoWorkSpace.API/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-GHAP9BM;Database=VeterinaryPS;Encrypt=False;User ID=sa;Password=Camilo780.;"
+    "DefaultConnection": "Server=DZULUAGA;Database=CoWorkSpace;Encrypt=False;User ID=sa;Password=dccz0223*"
   },
 
   "Logging": {
